# SoftwareRenderer

./: README.md
src/examples/: Box.cpp  CMakeLists.txt  RasterizerTest.c  VertexProcessorTest.c
src/renderer/: CMakeLists.txt  EdgeData.h  EdgeEquation.h  LineClipper.c  LineClipper.h  ParameterEquation.h  PixelData.h  PixelShader.c  PixelShader.h  PolyClipper.c  PolyClipper.h  Rasterizer.c  Rasterizer.h  Renderer.c  Renderer.h  TriangleEquations.h  Vector.c  Vector.h  VertexCache.h  VertexProcessor.c  VertexProcessor.h  VertexShader.c  VertexShader.h
